@@ -1,15 +1,3 @@
-dup2() is atomic and should help security:
+grep OVERALLOC *
 
-  int fd_dup(int src, int dst)
-  {
-    if (src == dst) return 0;
-  #ifdef HAVE_DUP2
-    return (dup2(src, dst) != -1);
-  #else
-    if (fcntl(src, F_GETFL, 0) == -1) return -1;
-    close(dst);
-    if (fcntl(src, F_DUPFD, dst) == -1) return -1;
-    return 1;
-  #endif
-  }
-
+What happens if OVERALLOC is 0? Infinite loops in most cases.
