@@ -142,3 +142,4 @@
 20060719 code: installer update.
 20060719 note: previous version withdrawn!
 20060719 version: corelib-0.41
+20060728 code: added EOVERFLOW/error_overflow to error.
